unpackaged/main/default/objects/Opportunity/fields/Auto_number__c.field-meta.xml
<CustomField>
    <fullName>Auto_number__c</fullName>
    <label>Auto number</label>
    <type>AutoNumber</type>
</CustomField>