unpackaged/main/default/objects/Opportunity/fields/CollectionOfIdAndNumber__c.field-meta.xml
<CustomField>
    <fullName>CollectionOfIdAndNumber__c</fullName>
    <label>CollectionOfIdAndNumber</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>