unpackaged/main/default/objects/Opportunity/fields/CounterOfProductAdded__c.field-meta.xml
<CustomField>
    <fullName>CounterOfProductAdded__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CounterOfProductAdded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>