unpackaged/main/default/objects/Opportunity/fields/kljlkjklj__c.field-meta.xml
<CustomField>
    <fullName>kljlkjklj__c</fullName>
    <formula>IF( 
  ISPICKVAL( StageName , &#39;New&#39;)  , 30,  
  IF( 
     ISPICKVAL( StageName , &#39;Prospecting&#39;) , 0.1, 0
     )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>kljlkjklj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>