unpackaged/main/default/objects/Opportunity/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <defaultValue>&#39;0&#39;</defaultValue>
    <label>Line Item</label>
    <length>18</length>
    <type>Text</type>
</CustomField>