unpackaged/main/default/objects/Opportunity/fields/No_there_is_no_contact_role__c.field-meta.xml
<CustomField>
    <fullName>No_there_is_no_contact_role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>there is no primary contact role</label>
    <type>Checkbox</type>
</CustomField>