unpackaged/main/default/objects/Opportunity/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <defaultValue>$Setup.Codes__c.Code__c</defaultValue>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>