unpackaged/main/default/objects/Opportunity/recordTypes/Finance_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Finance_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Finance</businessProcess>
    <label>Finance Opportunity</label>
</RecordType>