unpackaged/main/default/objects/Opportunity/recordTypes/SalesOpportunity.recordType-meta.xml
<RecordType>
    <fullName>SalesOpportunity</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Sales Opportunity</label>
</RecordType>