unpackaged/main/default/objects/Opportunity/validationRules/CantCreateOppoOfSalesClosedEdition.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCreateOppoOfSalesClosedEdition</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
     TEXT(Edition__r.Stage__c)==&quot;Finance Closed&quot; , 
    True,
      (
      ISPICKVAL( Edition__r.Stage__c , &quot;Sales Closed&quot;)  ||  
       TEXT( PRIORVALUE( StageName ) ) == &quot;Closed Lost&quot;  
      )  &amp;&amp; NOT( $User.Alias == &quot;wsmit&quot;) 
  )</errorConditionFormula>
    <errorMessage>you can not create opportunity of edition stage sales closed</errorMessage>
</ValidationRule>