unpackaged/main/default/objects/Opportunity/validationRules/CantCreateOppoOfSalesClosedEdition2.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCreateOppoOfSalesClosedEdition2</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    TEXT(Edition__r.Stage__c)  = &quot;Finance Closed&quot; ,
    AND(
        TEXT( Edition__r.Stage__c ) = &quot;sales Closed&quot; || TEXT( PRIORVALUE( StageName ) ) == &quot;Closed Lost&quot; ,
        NOT( $User.Alias == &quot;wsmit&quot;) 
        )
   )</errorConditionFormula>
    <errorMessage>you can not create opportunity of edition stage sales closed</errorMessage>
</ValidationRule>