unpackaged/main/default/objects/Opportunity/validationRules/Dont_make_mistake.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_make_mistake</fullName>
    <active>false</active>
    <errorConditionFormula>OR( 
    AND( 
        TEXT(PRIORVALUE( StageName)) == &#39;Prospecting&#39; ,  
        ISPICKVAL( StageName , &#39;Closed Won&#39;)
        ),
    AND(TEXT(PRIORVALUE( StageName)) == &#39;Qualification&#39; ,  
        ISPICKVAL( StageName , &#39;Closed Lost&#39;)
       )
   )</errorConditionFormula>
    <errorMessage>yup</errorMessage>
</ValidationRule>