unpackaged/main/default/objects/Opportunity/validationRules/If_Primary_Contact_Has_Not_Present.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Primary_Contact_Has_Not_Present</fullName>
    <active>false</active>
    <errorConditionFormula>No_there_is_no_contact_role__c</errorConditionFormula>
    <errorMessage>Please add the contact role</errorMessage>
</ValidationRule>