unpackaged/main/default/objects/Opportunity/validationRules/just_checking.validationRule-meta.xml
<ValidationRule>
    <fullName>just_checking</fullName>
    <active>true</active>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>there is something is different</errorMessage>
</ValidationRule>