unpackaged/main/default/objects/Opportunity/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( LEFT(Phone_Number__c, 3)== &#39;+91&#39; )  ||  NOT( LEN( Phone_Number__c )==13 )</errorConditionFormula>
    <errorMessage>Please provide correct number with country code</errorMessage>
</ValidationRule>