unpackaged/main/default/objects/Opportunity/validationRules/Testing_Permission_without_Custom_sett.validationRule-meta.xml
<ValidationRule>
    <fullName>Testing_Permission_without_Custom_sett</fullName>
    <active>false</active>
    <errorConditionFormula>$Permission.Random_Permission</errorConditionFormula>
    <errorMessage>You can not create opportunity because you have that permission</errorMessage>
</ValidationRule>